flicker issue solved

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,1 @@
 @import "tailwindcss";
-@view-transition {
-  navigation: auto;
-}
